[gd_scene load_steps=5 format=3 uid="uid://bd6oli7huqnr8"]

[ext_resource type="Script" path="res://Scripts/pirate_coin.gd" id="1_6o0mn"]
[ext_resource type="Texture2D" uid="uid://b2tryhewkf4rr" path="res://Resources/Textures/pirateCoin.png" id="1_eu3w6"]
[ext_resource type="Texture2D" uid="uid://dgcsktj6h3mjo" path="res://Resources/Textures/Interagieren Anzeige v1.png" id="3_e3w57"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbdgb"]
size = Vector2(64, 64)

[node name="PirateCoin" type="Node2D"]
script = ExtResource("1_6o0mn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_eu3w6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_sbdgb")

[node name="InteractUI" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -184)
scale = Vector2(0.29682, 0.29682)
texture = ExtResource("3_e3w57")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
